Fixed imagine alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -34,4 +34,5 @@ body {
 }
 #selfie-container {
     display: inline-block;
+    text-align: center;
 }
